Don't use fixed background image on mobile
SEE: http://stackoverflow.com/questions/24154666/background-image-size-cover-not-working-on-ios/43058483#43058483

--- a/src/scripts/components/site-header/site-header.css
+++ b/src/scripts/components/site-header/site-header.css
@@ -44,7 +44,12 @@
 
 .imageHomePage {
   composes: image;
-  background-attachment: fixed;
+}
+
+@media screen and screen_small_min_width {
+  .imageHomePage {
+    background-attachment: fixed;
+  }
 }
 
 .imageContentPage {
